--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,8 +13,7 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>Astro</h1>
-    <h1>blog creado en astro</h1>
-    <p>lo que sea, perro</p>
+    <h1>My Astro Learning Blog</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 </html>
